--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="he" style="height:100%;">
 
 <head>
     <meta charset="utf-8" />
@@ -10,11 +10,12 @@
     <link href="css/app.css" rel="stylesheet" />
     <link href="CountOnIt.Client.styles.css" rel="stylesheet" />
     <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" sizes="512x512" href="icon-192.png"/>
-    
+    <link rel="apple-touch-icon" sizes="512x512" href="icon-192.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
 </head>
 
-<body>
+<body style="font-family: 'Heebo', sans-serif; font-weight: 400; color: #030942; height: 100%; background-color: #EDEFF7; width:100%;">
     <div id="app">Loading...</div>
 
     <div id="blazor-error-ui">
