Revert "Merge branch 'main' into Dana"
This reverts commit a5b9ce6976426fb833cc3e0e815a38e3e09bb706, reversing
changes made to b1d57c1db092c87e53b3d96ea79b1052f0b1c1c4.

--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="he" style="height:100%;">
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
@@ -10,12 +10,11 @@
     <link href="css/app.css" rel="stylesheet" />
     <link href="CountOnIt.Client.styles.css" rel="stylesheet" />
     <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" sizes="512x512" href="icon-192.png" />
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
+    <link rel="apple-touch-icon" sizes="512x512" href="icon-192.png"/>
+    
 </head>
 
-<body style="font-family: 'Heebo', sans-serif; font-weight: 400; color: #030942; height: 100%; background-color: #EDEFF7; width:100%;">
+<body>
     <div id="app">Loading...</div>
 
     <div id="blazor-error-ui">
@@ -46,7 +45,6 @@
 
         button.addEventListener('click', () => picker.togglePicker(button));
     </script>
-
 </body>
 
 </html>
