עדכון תצוגה- בדף הבית + בדף מבט על
בדף הבית- סך ההוצאות של כל תת קטגוריה יוצג בהתאם לסכום של החודש הנוכחי.
בדף מבט על- כשלוחצים על עריכה של הזנה שמפוצלת לתשלומים, מה שמוצג בתיבת הטקסט של סכום ההזנה הוא השלם ולא הפיצול.

--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<body>
+<body style="font-family: 'Heebo', sans-serif; font-weight: 400; color: #030942; height: 100%; background-color: #EDEFF7; width:100%;">
     <div id="app">Loading...</div>
 
     <div id="blazor-error-ui">
