--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -24,8 +24,12 @@
     <!--<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>-->
     <!--<script src="_framework/blazor.webassembly.js"></script>-->
     <!--<script src="_content/Blazorise.Charts/charts.js?v=1.5.2.0"></script>-->
-
-
+    <!--<script src="backPageIdentifier.js"></script>-->
+    <script>
+        function navigateBack() {
+            window.history.back();
+        }
+    </script>
 </head>
 
 <body style="font-family: 'Heebo', sans-serif; font-weight: 400; color: #030942; height: 100%; background-color: #EDEFF7; width:100%;">
@@ -63,6 +67,8 @@
 
     <script src="_content/Blazorise.Charts/charts.js?v=1.6.0"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
+
+
 
 </body>
 
